--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       padding: 1rem;
       border-radius: 8px;
       box-shadow: 0 0 10px rgba(0,0,0,0.1);
+      position: relative;
     }
     h2 {
       text-align: center;
@@ -35,6 +36,16 @@
       border: 1px solid #ccc;
       border-radius: 4px;
     }
+    input[readonly] {
+      background-color: #e9e9e9;
+    }
+    .row {
+      display: flex;
+      gap: 1rem;
+    }
+    .row > div {
+      flex: 1;
+    }
     button {
       margin-top: 1.5rem;
       width: 100%;
@@ -49,14 +60,32 @@
     button:hover {
       background-color: #005ea6;
     }
+    .watermark {
+      margin-top: 2rem;
+      text-align: center;
+      font-size: 0.8rem;
+      color: #999;
+      font-style: italic;
+    }
   </style>
 </head>
 <body>
   <div class="container">
     <h2>Registro de Servicio</h2>
     <form id="serviceForm">
-      <label for="fecha">FECHA *</label>
-      <input type="date" id="fecha" required>
+      <label for="folio">FOLIO</label>
+      <input type="text" id="folio" readonly>
+
+      <div class="row">
+        <div>
+          <label for="fecha">FECHA *</label>
+          <input type="text" id="fecha" readonly>
+        </div>
+        <div>
+          <label for="hora">HORA *</label>
+          <input type="text" id="hora" readonly>
+        </div>
+      </div>
 
       <label for="telefonista">TELEFONISTA *</label>
       <input type="text" id="telefonista" required>
@@ -79,13 +108,27 @@
       <label for="tipo">TIPO DE SERVICIO</label>
       <select id="tipo">
         <option value="">Selecciona</option>
-        <option value="PASAR CORRIENTE">PASAR CORRIENTE</option>
-        <option value="TRASLADO">TRASLADO</option>
-        <option value="ASISTENCIA MECÁNICA">ASISTENCIA MECÁNICA</option>
+        <option>Carro amplio</option>
+        <option>2 carros</option>
+        <option>No Tsuru</option>
+        <option>Tsuru</option>
+        <option>Carro sin rotular</option>
+        <option>Pasar corriente</option>
+        <option>Cambio de llanta</option>
+        <option>Mensajería</option>
+        <option>Mensajería compras</option>
+        <option>Paquetería</option>
+        <option>Guía</option>
+        <option>Transporte de mascota</option>
+        <option>Ida y vuelta</option>
       </select>
 
       <button type="submit">Registrar Servicio</button>
     </form>
+    <div class="watermark">
+      Propiedad y diseño de Jesús Sánchez con la colaboración de Microsoft Copilot
+    </div>
   </div>
-</body>
-</html>
+
+  <script>
+    const webAppUrl = "https://script.google.com/macros/s/AKfycbyXaFGzYJAhF3L_5ZeXvC9t3
