--- a/index.html
+++ b/index.html
@@ -1,220 +1,141 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Registro de Servicio</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Captura de Servicios - Sitio Herradura</title>
   <style>
     body {
       font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 1rem;
-      background-color: #f4f4f4;
+      background: #f9f9f9;
+      padding: 20px;
     }
-    .container {
+    h1 {
+      text-align: center;
+      margin-bottom: 20px;
+    }
+    form {
+      background: #fff;
+      padding: 20px;
+      border-radius: 8px;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
       max-width: 600px;
       margin: auto;
-      background: white;
-      padding: 1rem;
-      border-radius: 8px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
-      position: relative;
-    }
-    h2 {
-      text-align: center;
-      margin-bottom: 1rem;
     }
     label {
       display: block;
-      margin-top: 1rem;
+      margin-top: 15px;
       font-weight: bold;
     }
-    input, select, textarea {
+    input, select {
       width: 100%;
-      padding: 0.5rem;
-      margin-top: 0.3rem;
+      padding: 10px;
+      margin-top: 5px;
       border: 1px solid #ccc;
-      border-radius: 4px;
-    }
-    input[readonly] {
-      background-color: #e9e9e9;
-    }
-    .row {
-      display: flex;
-      gap: 1rem;
-    }
-    .row > div {
-      flex: 1;
+      border-radius: 5px;
     }
     button {
-      margin-top: 1.5rem;
-      width: 100%;
-      padding: 0.7rem;
-      background-color: #0078D7;
+      margin-top: 20px;
+      padding: 10px 15px;
+      background: #0078D4;
       color: white;
       border: none;
-      border-radius: 4px;
-      font-size: 1rem;
+      border-radius: 5px;
       cursor: pointer;
     }
-    button:hover {
-      background-color: #005ea6;
-    }
-    .watermark {
-      margin-top: 2rem;
+    .success {
+      color: green;
       text-align: center;
-      font-size: 0.8rem;
-      color: #999;
-      font-style: italic;
+      margin-top: 15px;
+    }
+    .error {
+      color: red;
+      text-align: center;
+      margin-top: 15px;
     }
   </style>
 </head>
 <body>
-  <div class="container">
-    <h2>Registro de Servicio</h2>
-    <form id="serviceForm">
-      <label for="folio">FOLIO</label>
-      <input type="text" id="folio" readonly>
+  <h1>Captura de Servicios</h1>
 
-      <div class="row">
-        <div>
-          <label for="fecha">FECHA *</label>
-          <input type="text" id="fecha" readonly>
-        </div>
-        <div>
-          <label for="hora">HORA *</label>
-          <input type="text" id="hora" readonly>
-        </div>
-      </div>
+  <form id="formulario">
+    <label for="folio">Folio</label>
+    <input type="text" id="folio" name="folio" readonly />
 
-      <label for="telefonista">TELEFONISTA *</label>
-      <input type="text" id="telefonista" required>
+    <label for="responsable">Responsable</label>
+    <input type="text" id="responsable" name="responsable" required />
 
-      <label for="direccion">DIRECCIÓN *</label>
-      <input type="text" id="direccion" required>
+    <label for="tipo">Tipo de servicio</label>
+    <select id="tipo" name="tipo" required>
+      <option value="">Selecciona una opción</option>
+      <option value="Traslado">Traslado</option>
+      <option value="Apoyo operativo">Apoyo operativo</option>
+      <option value="Supervisión">Supervisión</option>
+      <option value="Otro">Otro</option>
+    </select>
 
-      <label for="destino">DESTINO</label>
-      <input type="text" id="destino">
+    <label for="fecha">Fecha</label>
+    <input type="text" id="fecha" name="fecha" readonly />
 
-      <label for="asignado">ASIGNADOAX *</label>
-      <input type="text" id="asignado" required>
+    <label for="hora">Hora</label>
+    <input type="text" id="hora" name="hora" readonly />
 
-      <label for="instrucciones">INSTRUCCIONES ESPECIALES</label>
-      <textarea id="instrucciones" rows="3"></textarea>
-
-      <label for="telefono">TELÉFONO</label>
-      <input type="tel" id="telefono">
-
-      <label for="tipo">TIPO DE SERVICIO</label>
-      <select id="tipo">
-        <option value="">Selecciona</option>
-        <option>Carro amplio</option>
-        <option>2 carros</option>
-        <option>No Tsuru</option>
-        <option>Tsuru</option>
-        <option>Carro sin rotular</option>
-        <option>Pasar corriente</option>
-        <option>Cambio de llanta</option>
-        <option>Mensajería</option>
-        <option>Mensajería compras</option>
-        <option>Paquetería</option>
-        <option>Guía</option>
-        <option>Transporte de mascota</option>
-        <option>Ida y vuelta</option>
-      </select>
-
-      <button type="submit">Registrar Servicio</button>
-    </form>
-    <div class="watermark">
-      Propiedad y diseño de Jesús Sánchez con la colaboración de Microsoft Copilot
-    </div>
-  </div>
+    <button type="submit">Registrar servicio</button>
+    <div id="mensaje"></div>
+  </form>
 
   <script>
-    const webAppUrl = "https://script.google.com/macros/s/AKfycbyXaFGzYJAhF3L_5ZeXvC9t3T7QOI1EmHdca5F-ssdYFhM0kaFW4ceFvz5185NWV8vBSw/exec";
+    const folioInput = document.getElementById("folio");
+    const fechaInput = document.getElementById("fecha");
+    const horaInput = document.getElementById("hora");
+    const formulario = document.getElementById("formulario");
+    const mensaje = document.getElementById("mensaje");
 
-    async function obtenerFolio() {
-      try {
-        const res = await fetch(webAppUrl);
-        const folio = await res.text();
-        document.getElementById("folio").value = folio;
-      } catch (error) {
-        console.error("Error al obtener folio:", error);
-      }
-    }
-
-    function establecerFechaHora() {
+    function generarFolio() {
       const ahora = new Date();
-      const fecha = ahora.toLocaleDateString('es-MX');
-      const hora = ahora.toLocaleTimeString('es-MX', { hour: '2-digit', minute: '2-digit' });
-      document.getElementById('fecha').value = fecha;
-      document.getElementById('hora').value = hora;
+      const año = ahora.getFullYear().toString().slice(-2);
+      const mes = String(ahora.getMonth() + 1).padStart(2, "0");
+      const dia = String(ahora.getDate()).padStart(2, "0");
+      const hora = String(ahora.getHours()).padStart(2, "0");
+      const min = String(ahora.getMinutes()).padStart(2, "0");
+      return `SH-${año}${mes}${dia}-${hora}${min}`;
     }
 
-    function construirMensajeTelegram(datos) {
-      return `📋 *Registro de Servicio*\n` +
-             `🆔 Folio: ${datos.folio}\n` +
-             `📅 Fecha: ${datos.fecha} 🕒 Hora: ${datos.hora}\n` +
-             `👤 Telefonista: ${datos.telefonista}\n` +
-             `📍 Dirección: ${datos.direccion}\n` +
-             `➡️ Destino: ${datos.destino || "N/A"}\n` +
-             `🧑‍🔧 AsignadoAX: ${datos.asignado}\n` +
-             `📝 Instrucciones: ${datos.instrucciones || "Ninguna"}\n` +
-             `📞 Teléfono: ${datos.telefono || "N/A"}\n` +
-             `🚗 Tipo de servicio: ${datos.tipo}`;
+    function actualizarFechaHora() {
+      const ahora = new Date();
+      fechaInput.value = ahora.toLocaleDateString("es-MX");
+      horaInput.value = ahora.toLocaleTimeString("es-MX");
     }
 
-    document.getElementById("serviceForm").addEventListener("submit", async function(e) {
+    folioInput.value = generarFolio();
+    actualizarFechaHora();
+
+    formulario.addEventListener("submit", function (e) {
       e.preventDefault();
 
       const datos = {
-        folio: document.getElementById("folio").value,
-        fecha: document.getElementById("fecha").value,
-        hora: document.getElementById("hora").value,
-        telefonista: document.getElementById("telefonista").value,
-        direccion: document.getElementById("direccion").value,
-        destino: document.getElementById("destino").value,
-        asignado: document.getElementById("asignado").value,
-        instrucciones: document.getElementById("instrucciones").value,
-        telefono: document.getElementById("telefono").value,
-        tipo: document.getElementById("tipo").value
+        folio: folioInput.value,
+        responsable: formulario.responsable.value.trim(),
+        tipo: formulario.tipo.value,
+        fecha: fechaInput.value,
+        hora: horaInput.value
       };
 
-      try {
-        // 1. Guardar en Google Sheets
-        const res = await fetch(webAppUrl, {
-          method: "POST",
-          body: JSON.stringify(datos),
-          headers: {
-            "Content-Type": "application/json"
-          }
-        });
-
-        const respuesta = await res.text();
-        alert("✅ Servicio registrado correctamente.");
-
-        // 2. Generar copia virtual para Telegram
-        const mensajeTelegram = construirMensajeTelegram(datos);
-        prompt("📲 Copia este mensaje para pegar en Telegram:", mensajeTelegram);
-
-        // 3. Preguntar si desea limpiar el formulario
-        const limpiar = confirm("¿Deseas capturar otro servicio?");
-        if (limpiar) {
-          document.getElementById("serviceForm").reset();
-          establecerFechaHora();
-          obtenerFolio();
-        }
-
-      } catch (error) {
-        console.error("Error al registrar:", error);
-        alert("❌ Error al registrar el servicio.");
+      if (!datos.responsable || !datos.tipo) {
+        mensaje.textContent = "Todos los campos son obligatorios.";
+        mensaje.className = "error";
+        return;
       }
-    });
 
-    window.onload = () => {
-      establecerFechaHora();
-      obtenerFolio();
-    };
+      // Aquí puedes conectar con Google Sheets usando fetch a tu endpoint
+      console.log("Datos enviados:", datos);
+      mensaje.textContent = "Servicio registrado correctamente.";
+      mensaje.className = "success";
+
+      formulario.reset();
+      folioInput.value = generarFolio();
+      actualizarFechaHora();
+    });
   </script>
 </body>
 </html>
