--- a/index.html
+++ b/index.html
@@ -1,130 +1,220 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Tarifa de Destinos - Sitio Herradura</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Registro de Servicio</title>
   <style>
     body {
       font-family: Arial, sans-serif;
-      background: #f4f4f4;
       margin: 0;
-      padding: 20px;
+      padding: 1rem;
+      background-color: #f4f4f4;
     }
-    header {
-      text-align: center;
-      margin-bottom: 20px;
-    }
-    input[type="text"] {
-      width: 100%;
-      padding: 10px;
-      font-size: 16px;
-      margin-bottom: 20px;
-      border: 1px solid #ccc;
-      border-radius: 5px;
-    }
-    .tarifa-card {
-      background: #fff;
-      padding: 15px;
-      margin-bottom: 15px;
+    .container {
+      max-width: 600px;
+      margin: auto;
+      background: white;
+      padding: 1rem;
       border-radius: 8px;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+      position: relative;
     }
-    .tarifa-card h3 {
-      margin: 0 0 10px;
-      color: #333;
-    }
-    .tarifa-card ul {
-      list-style: none;
-      padding: 0;
-    }
-    .tarifa-card li {
-      margin-bottom: 5px;
-    }
-    .no-result {
+    h2 {
       text-align: center;
-      color: #888;
+      margin-bottom: 1rem;
+    }
+    label {
+      display: block;
+      margin-top: 1rem;
+      font-weight: bold;
+    }
+    input, select, textarea {
+      width: 100%;
+      padding: 0.5rem;
+      margin-top: 0.3rem;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+    }
+    input[readonly] {
+      background-color: #e9e9e9;
+    }
+    .row {
+      display: flex;
+      gap: 1rem;
+    }
+    .row > div {
+      flex: 1;
+    }
+    button {
+      margin-top: 1.5rem;
+      width: 100%;
+      padding: 0.7rem;
+      background-color: #0078D7;
+      color: white;
+      border: none;
+      border-radius: 4px;
+      font-size: 1rem;
+      cursor: pointer;
+    }
+    button:hover {
+      background-color: #005ea6;
+    }
+    .watermark {
+      margin-top: 2rem;
+      text-align: center;
+      font-size: 0.8rem;
+      color: #999;
       font-style: italic;
     }
   </style>
 </head>
 <body>
-  <header>
-    <h1>Tarifa de Destinos</h1>
-    <p>Sitio Herradura</p>
-  </header>
+  <div class="container">
+    <h2>Registro de Servicio</h2>
+    <form id="serviceForm">
+      <label for="folio">FOLIO</label>
+      <input type="text" id="folio" readonly>
 
-  <input type="text" id="buscador" placeholder="Buscar destino..." />
+      <div class="row">
+        <div>
+          <label for="fecha">FECHA *</label>
+          <input type="text" id="fecha" readonly>
+        </div>
+        <div>
+          <label for="hora">HORA *</label>
+          <input type="text" id="hora" readonly>
+        </div>
+      </div>
 
-  <div id="resultados"></div>
+      <label for="telefonista">TELEFONISTA *</label>
+      <input type="text" id="telefonista" required>
+
+      <label for="direccion">DIRECCIÓN *</label>
+      <input type="text" id="direccion" required>
+
+      <label for="destino">DESTINO</label>
+      <input type="text" id="destino">
+
+      <label for="asignado">ASIGNADOAX *</label>
+      <input type="text" id="asignado" required>
+
+      <label for="instrucciones">INSTRUCCIONES ESPECIALES</label>
+      <textarea id="instrucciones" rows="3"></textarea>
+
+      <label for="telefono">TELÉFONO</label>
+      <input type="tel" id="telefono">
+
+      <label for="tipo">TIPO DE SERVICIO</label>
+      <select id="tipo">
+        <option value="">Selecciona</option>
+        <option>Carro amplio</option>
+        <option>2 carros</option>
+        <option>No Tsuru</option>
+        <option>Tsuru</option>
+        <option>Carro sin rotular</option>
+        <option>Pasar corriente</option>
+        <option>Cambio de llanta</option>
+        <option>Mensajería</option>
+        <option>Mensajería compras</option>
+        <option>Paquetería</option>
+        <option>Guía</option>
+        <option>Transporte de mascota</option>
+        <option>Ida y vuelta</option>
+      </select>
+
+      <button type="submit">Registrar Servicio</button>
+    </form>
+    <div class="watermark">
+      Propiedad y diseño de Jesús Sánchez con la colaboración de Microsoft Copilot
+    </div>
+  </div>
 
   <script>
-    const destinos = [
-      {
-        destino: "20 de Noviembre por Eduardo Molina",
-        tarifa_general: "$340.00",
-        tarifa_nocturna: "No disponible",
-        tarifa_tdc: "$357.00"
-      },
-      {
-        destino: "5 de Mayo (hospital infantil de legaría)",
-        tarifa_general: "$160.00",
-        tarifa_nocturna: "$192.00",
-        tarifa_tdc: "$168.00"
-      },
-      {
-        destino: "Academia de Policía",
-        tarifa_general: "$350.00",
-        tarifa_nocturna: "No disponible",
-        tarifa_tdc: "$367.50"
-      },
-      {
-        destino: "Academia de Policía VIA SANTA FE",
-        tarifa_general: "$340.00",
-        tarifa_nocturna: "No disponible",
-        tarifa_tdc: "$357.00"
+    const webAppUrl = "https://script.google.com/macros/s/AKfycbyXaFGzYJAhF3L_5ZeXvC9t3T7QOI1EmHdca5F-ssdYFhM0kaFW4ceFvz5185NWV8vBSw/exec";
+
+    async function obtenerFolio() {
+      try {
+        const res = await fetch(webAppUrl);
+        const folio = await res.text();
+        document.getElementById("folio").value = folio;
+      } catch (error) {
+        console.error("Error al obtener folio:", error);
       }
-    ];
-
-    const buscador = document.getElementById("buscador");
-    const resultados = document.getElementById("resultados");
-
-    function normalizar(texto) {
-      return texto.toLowerCase().normalize("NFD").replace(/[\u0300-\u036f]/g, "");
     }
 
-    function buscarDestinos() {
-      const termino = normalizar(buscador.value.trim());
-      resultados.innerHTML = "";
-
-      if (!termino) return;
-
-      const encontrados = destinos.filter(d =>
-        normalizar(d.destino).includes(termino)
-      );
-
-      if (encontrados.length === 0) {
-        resultados.innerHTML = `<p class="no-result">No se encontró ningún destino con "${buscador.value}"</p>`;
-        // Aquí podrías agregar la lógica para registrar el término no encontrado
-        return;
-      }
-
-      encontrados.forEach(d => {
-        const card = document.createElement("div");
-        card.className = "tarifa-card";
-        card.innerHTML = `
-          <h3>${d.destino}</h3>
-          <ul>
-            <li><strong>Tarifa general:</strong> ${d.tarifa_general}</li>
-            <li><strong>Tarifa nocturna:</strong> ${d.tarifa_nocturna}</li>
-            <li><strong>Tarifa TDC:</strong> ${d.tarifa_tdc}</li>
-          </ul>
-        `;
-        resultados.appendChild(card);
-      });
+    function establecerFechaHora() {
+      const ahora = new Date();
+      const fecha = ahora.toLocaleDateString('es-MX');
+      const hora = ahora.toLocaleTimeString('es-MX', { hour: '2-digit', minute: '2-digit' });
+      document.getElementById('fecha').value = fecha;
+      document.getElementById('hora').value = hora;
     }
 
-    buscador.addEventListener("input", buscarDestinos);
+    function construirMensajeTelegram(datos) {
+      return `📋 *Registro de Servicio*\n` +
+             `🆔 Folio: ${datos.folio}\n` +
+             `📅 Fecha: ${datos.fecha} 🕒 Hora: ${datos.hora}\n` +
+             `👤 Telefonista: ${datos.telefonista}\n` +
+             `📍 Dirección: ${datos.direccion}\n` +
+             `➡️ Destino: ${datos.destino || "N/A"}\n` +
+             `🧑‍🔧 AsignadoAX: ${datos.asignado}\n` +
+             `📝 Instrucciones: ${datos.instrucciones || "Ninguna"}\n` +
+             `📞 Teléfono: ${datos.telefono || "N/A"}\n` +
+             `🚗 Tipo de servicio: ${datos.tipo}`;
+    }
+
+    document.getElementById("serviceForm").addEventListener("submit", async function(e) {
+      e.preventDefault();
+
+      const datos = {
+        folio: document.getElementById("folio").value,
+        fecha: document.getElementById("fecha").value,
+        hora: document.getElementById("hora").value,
+        telefonista: document.getElementById("telefonista").value,
+        direccion: document.getElementById("direccion").value,
+        destino: document.getElementById("destino").value,
+        asignado: document.getElementById("asignado").value,
+        instrucciones: document.getElementById("instrucciones").value,
+        telefono: document.getElementById("telefono").value,
+        tipo: document.getElementById("tipo").value
+      };
+
+      try {
+        // 1. Guardar en Google Sheets
+        const res = await fetch(webAppUrl, {
+          method: "POST",
+          body: JSON.stringify(datos),
+          headers: {
+            "Content-Type": "application/json"
+          }
+        });
+
+        const respuesta = await res.text();
+        alert("✅ Servicio registrado correctamente.");
+
+        // 2. Generar copia virtual para Telegram
+        const mensajeTelegram = construirMensajeTelegram(datos);
+        prompt("📲 Copia este mensaje para pegar en Telegram:", mensajeTelegram);
+
+        // 3. Preguntar si desea limpiar el formulario
+        const limpiar = confirm("¿Deseas capturar otro servicio?");
+        if (limpiar) {
+          document.getElementById("serviceForm").reset();
+          establecerFechaHora();
+          obtenerFolio();
+        }
+
+      } catch (error) {
+        console.error("Error al registrar:", error);
+        alert("❌ Error al registrar el servicio.");
+      }
+    });
+
+    window.onload = () => {
+      establecerFechaHora();
+      obtenerFolio();
+    };
   </script>
 </body>
 </html>
