--- a/index.html
+++ b/index.html
@@ -11,60 +11,75 @@
       padding: 1rem;
       background-color: #f4f4f4;
     }
+
     .container {
       max-width: 600px;
       margin: auto;
-      background: white;
+      background-color: #0078D7; /* Fondo azul sólido */
       padding: 1rem;
       border-radius: 8px;
       box-shadow: 0 0 10px rgba(0,0,0,0.1);
       position: relative;
+      color: white;
     }
+
     h2 {
       text-align: center;
       margin-bottom: 1rem;
+      color: white;
     }
+
     label {
       display: block;
       margin-top: 1rem;
       font-weight: bold;
     }
+
     input, select, textarea {
       width: 100%;
       padding: 0.5rem;
       margin-top: 0.3rem;
       border: 1px solid #ccc;
       border-radius: 4px;
+      background-color: white;
+      color: #333;
     }
+
     input[readonly] {
       background-color: #e9e9e9;
     }
+
     .row {
       display: flex;
       gap: 1rem;
     }
+
     .row > div {
       flex: 1;
     }
+
     button {
       margin-top: 1.5rem;
       width: 100%;
       padding: 0.7rem;
-      background-color: #0078D7;
-      color: white;
+      background-color: white;
+      color: #0078D7;
       border: none;
       border-radius: 4px;
       font-size: 1rem;
       cursor: pointer;
+      font-weight: bold;
     }
+
     button:hover {
-      background-color: #005ea6;
+      background-color: #e6e6e6;
     }
+
     .watermark {
       margin-top: 2rem;
       text-align: center;
       font-size: 0.8rem;
-      color: #999;
+      color: #cce0ff;
       font-style: italic;
     }
   </style>
@@ -193,9 +208,15 @@
         const respuesta = await res.text();
         alert("✅ Servicio registrado correctamente.");
 
-        // 2. Generar copia virtual para Telegram
+        // 2. Copiar automáticamente al portapapeles
         const mensajeTelegram = construirMensajeTelegram(datos);
-        prompt("📲 Copia este mensaje para pegar en Telegram:", mensajeTelegram);
+        try {
+          await navigator.clipboard.writeText(mensajeTelegram);
+          alert("📋 El mensaje ha sido copiado automáticamente. Puedes pegarlo en Telegram.");
+        } catch (err) {
+          console.warn("⚠️ Error al copiar:", err);
+          alert("⚠️ No se pudo copiar el mensaje. Intenta hacerlo manualmente.");
+        }
 
         // 3. Preguntar si desea limpiar el formulario
         const limpiar = confirm("¿Deseas capturar otro servicio?");
