--- a/index.html
+++ b/index.html
@@ -5,27 +5,35 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Registro de Servicio</title>
   <style>
+    * {
+      box-sizing: border-box;
+    }
+
     body {
       font-family: Arial, sans-serif;
       margin: 0;
-      padding: 1rem;
+      padding: 0;
       background-color: #f4f4f4;
+      display: flex;
+      justify-content: center;
+      align-items: flex-start;
+      min-height: 100vh;
     }
 
     .container {
+      width: 100%;
       max-width: 600px;
-      margin: auto;
-      background-color: #0078D7; /* Fondo azul sólido */
-      padding: 1rem;
+      margin: 2rem;
+      background-color: #0078D7; /* Azul institucional sólido */
+      padding: 2rem;
       border-radius: 8px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
-      position: relative;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.15);
       color: white;
     }
 
     h2 {
       text-align: center;
-      margin-bottom: 1rem;
+      margin-bottom: 1.5rem;
       color: white;
     }
 
@@ -37,12 +45,13 @@
 
     input, select, textarea {
       width: 100%;
-      padding: 0.5rem;
+      padding: 0.6rem;
       margin-top: 0.3rem;
       border: 1px solid #ccc;
       border-radius: 4px;
       background-color: white;
       color: #333;
+      font-size: 1rem;
     }
 
     input[readonly] {
@@ -59,16 +68,16 @@
     }
 
     button {
-      margin-top: 1.5rem;
+      margin-top: 2rem;
       width: 100%;
-      padding: 0.7rem;
+      padding: 0.8rem;
       background-color: white;
       color: #0078D7;
       border: none;
       border-radius: 4px;
       font-size: 1rem;
-      cursor: pointer;
       font-weight: bold;
+      cursor: pointer;
     }
 
     button:hover {
@@ -196,7 +205,6 @@
       };
 
       try {
-        // 1. Guardar en Google Sheets
         const res = await fetch(webAppUrl, {
           method: "POST",
           body: JSON.stringify(datos),
@@ -208,7 +216,6 @@
         const respuesta = await res.text();
         alert("✅ Servicio registrado correctamente.");
 
-        // 2. Copiar automáticamente al portapapeles
         const mensajeTelegram = construirMensajeTelegram(datos);
         try {
           await navigator.clipboard.writeText(mensajeTelegram);
@@ -218,7 +225,6 @@
           alert("⚠️ No se pudo copiar el mensaje. Intenta hacerlo manualmente.");
         }
 
-        // 3. Preguntar si desea limpiar el formulario
         const limpiar = confirm("¿Deseas capturar otro servicio?");
         if (limpiar) {
           document.getElementById("serviceForm").reset();
